--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest",
+    "test:watch": "vitest watch",
     "start": "react-scripts start",
     "watch": "nodemon --watch src --exec 'npm start'"
   },
@@ -19,11 +20,13 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -32,10 +35,10 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "jsdom": "^24.1.1",
+    "jsdom": "^24.1.3",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.3",
     "vite": "^5.3.4",
-    "vitest": "^2.0.4"
+    "vitest": "^2.1.4"
   }
 }
